--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
 
         /* Home Section Styling */
         .home {
-            height: 100vh;
+            height: 10vh;
             background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), 
-                        url('images/hero.jpg') no-repeat center center/cover;
+                        url('images/hero.jpg');
             justify-content: center;
             align-items: center;
             text-align: center;
