--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         footer {
             text-align: center;
             padding: 1rem 0;
-            background-color: #007bff;
+            background-color: #f3aba7;
             color: white;
         }
 
