--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         }
 
         header {
-            background-color: #007bff;
+            background-color: #f3aba7;
             color: white;
             text-align: center;
             padding: 1rem 0;
@@ -22,7 +22,7 @@
         nav {
             display: flex;
             justify-content: space-around;
-            background-color: #0056b3;
+            background-color: #f3aba7;
             padding: 0.5rem 0;
         }
 
