--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         nav {
             display: flex;
             justify-content: space-around;
-            background-color: #f3aba7;
+            background-color: #98ef80;
             padding: 0.5rem 0;
         }
 
