--- a/index.html
+++ b/index.html
@@ -77,33 +77,33 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Mobile Website</h1>
+        <h1>JULIA FLOWERS</h1>
     </header>
 
     <nav>
-        <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#services">Services</a>
+        <a href="#Products">Home</a>
+        <a href="#Gallery">About</a>
+        <a href="#FeedBack">Services</a>
         <a href="#contact">Contact</a>
     </nav>
 
     <div class="content">
-        <div class="section" id="home">
+        <div class="Products" id="home">
             <h2>Home</h2>
             <p>Welcome to the mobile-friendly website! Explore our content and learn more about what we offer.</p>
         </div>
 
-        <div class="section" id="about">
+        <div class="Gallery" id="about">
             <h2>About</h2>
             <p>This website is designed to be responsive and user-friendly, ensuring a great experience on all devices.</p>
         </div>
 
-        <div class="section" id="services">
+        <div class="FeedBack" id="services">
             <h2>Services</h2>
             <p>We provide a wide range of services to meet your needs, from web development to digital marketing.</p>
         </div>
 
-        <div class="section" id="contact">
+        <div class="contact" id="contact">
             <h2>Contact</h2>
             <p>Feel free to reach out to us for more information or to get started on your next project!</p>
         </div>
