--- a/index.html
+++ b/index.html
@@ -81,55 +81,36 @@
     </header>
 
     <nav>
-        <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#services">Services</a>
+        <a href="#Products">Home</a>
+        <a href="#Gallery">About</a>
+        <a href="#FeedBack">Services</a>
         <a href="#contact">Contact</a>
     </nav>
 
     <div class="content">
-        <div class="section" id="home">
-            <h2>Welcome to Julia Flowers</h2>
-            <p>Your one-stop shop for fresh, beautiful flowers for every occasion. Browse through our collections and find the perfect floral arrangements for your needs.</p>
-            <p><strong>Discover:</strong> <a href="#services">Our Services</a> | <a href="#about">Learn About Us</a></p>
+        <div class="Products" id="home">
+            <h2>Home</h2>
+            <p>Welcome to the mobile-friendly website! Explore our content and learn more about what we offer.</p>
         </div>
 
-        <div class="section" id="about">
-            <h2>About Julia Flowers</h2>
-            <p>Julia Flowers has been delivering happiness and beauty through flowers for over a decade. We are committed to providing fresh, high-quality arrangements to make your moments unforgettable.</p>
-            <p>Our mission is to connect people with nature's elegance. Learn more about our journey and values.</p>
-            <p><strong>Why Choose Us?</strong></p>
-            <ul>
-                <li>Fresh and locally sourced flowers</li>
-                <li>Customizable arrangements</li>
-                <li>Timely and reliable delivery services</li>
-            </ul>
+        <div class="Gallery" id="about">
+            <h2>About</h2>
+            <p>This website is designed to be responsive and user-friendly, ensuring a great experience on all devices.</p>
         </div>
 
-        <div class="section" id="services">
-            <h2>Our Services</h2>
-            <p>We specialize in creating floral experiences that suit all your needs:</p>
-            <ul>
-                <li>Wedding floral designs</li>
-                <li>Corporate event arrangements</li>
-                <li>Seasonal bouquets and gifts</li>
-                <li>Same-day delivery services</li>
-            </ul>
-            <p>Ready to brighten someone's day? <a href="#contact">Contact us</a> now or explore our offerings!</p>
+        <div class="FeedBack" id="services">
+            <h2>Services</h2>
+            <p>We provide a wide range of services to meet your needs, from web development to digital marketing.</p>
         </div>
 
-        <div class="section" id="contact">
-            <h2>Contact Us</h2>
-            <p>Have questions or want to place an order? We'd love to hear from you!</p>
-            <p><strong>Email:</strong> support@juliaflowers.com</p>
-            <p><strong>Phone:</strong> +1 234 567 890</p>
-            <p><strong>Visit Us:</strong> 123 Flower Lane, Floral City, FC 56789</p>
-            <p><a href="#home">Back to Home</a></p>
+        <div class="contact" id="contact">
+            <h2>Contact</h2>
+            <p>Feel free to reach out to us for more information or to get started on your next project!</p>
         </div>
     </div>
 
     <footer>
-        <p>&copy; 2025 Julia Flowers. All rights reserved.</p>
+        <p>&copy; 2025 Your Name. All rights reserved.</p>
     </footer>
 </body>
 </html>
