--- a/index.html
+++ b/index.html
@@ -156,13 +156,22 @@
             <h2>Gallery</h2>
             <div class="gallery-container">
                 <div class="gallery-item">
-                    <img src="https://via.placeholder.com/150" alt="Gallery Image 1">
+                    <img src="images/IMG_20250112_191300_172.jpg" alt="Gallery Image 1">
                 </div>
                 <div class="gallery-item">
-                    <img src="https://via.placeholder.com/150" alt="Gallery Image 2">
+                    <img src="images/IMG_20250112_191323_358.jpg" alt="Gallery Image 2">
                 </div>
                 <div class="gallery-item">
-                    <img src="https://via.placeholder.com/150" alt="Gallery Image 3">
+                    <img src="images/IMG_20250112_191331_341.jpg" alt="Gallery Image 3">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/IMG_20250112_191335_591.jpg" alt="Gallery Image 3">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/IMG_20250112_191336_017.jpg" alt="Gallery Image 3">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/IMG_20250112_191336_370.jpg" alt="Gallery Image 3">
                 </div>
             </div>
         </div>
