--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
         }
 
         .gallery-item img {
-            max-width: 100%;
+            width: 200px;
+            height: 150px;
+            object-fit: cover;
             border-radius: 8px;
         }
 
