--- a/index.html
+++ b/index.html
@@ -152,20 +152,24 @@
             <h2>Our Products</h2>
             <div class="products-container">
                 <div class="product">
-                    <img src="https://via.placeholder.com/150" alt="Product 1">
+                    <img src="images/IMG_20250112_221128_974.jpg" alt="Product 1">
                     <h3>Rose Bouquet</h3>
                     <p>Price: $30</p>
                 </div>
                 <div class="product">
-                    <img src="https://via.placeholder.com/150" alt="Product 2">
+                    <img src="images/IMG_20250112_221153_320.jpg" alt="Product 2">
                     <h3>Tulip Arrangement</h3>
                     <p>Price: $25</p>
                 </div>
                 <div class="product">
-                    <img src="https://via.placeholder.com/150" alt="Product 3">
+                    <img src="images/IMG_20250112_221502_788.jpg" alt="Product 3">
                     <h3>Orchid Pot</h3>
                     <p>Price: $40</p>
                 </div>
+                <div class="product">
+                    <img src="images/IMG_20250112_221513_072.jpg" alt="Product 3">
+                    <h3>Orchid Pot</h3>
+                    <p>Price: $40</p>
             </div>
         </div>
 
