--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
         .products-container {
             display: grid;
             gap: 1rem;
+            overflow-x: auto;
+            scroll-snap-type: x mandatory;
             grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
         }
 
@@ -170,7 +172,17 @@
                     <img src="images/IMG_20250112_221513_072.jpg" alt="Product 3">
                     <h3>Orchid Pot</h3>
                     <p>Price: $40</p>
-            </div>
+                </div>
+                                <div class="product">
+                    <img src="images/IMG_20250112_221502_788.jpg" alt="Product 3">
+                    <h3>Orchid Pot</h3>
+                    <p>Price: $40</p>
+                </div>
+                <div class="product">
+                    <img src="images/IMG_20250112_221513_072.jpg" alt="Product 3">
+                    <h3>Orchid Pot</h3>
+                    <p>Price: $40</p>
+                </div>
         </div>
 
         <!-- Gallery Section -->
