--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
                     <img src="images/IMG_20250112_221513_072.jpg" alt="Product 3">
                     <h3>Orchid Pot</h3>
                     <p>Price: $40</p>
+                </div>
 
         </div>
 
