--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
         <!-- Products Section -->
         <div class="section" id="Products">
             <h2>Our Products</h2>
+            <h3>PREMIUM</h3>
             <div class="products-row">
                 <div class="product">
                     <img src="images/IMG_20250112_221128_974.jpg" alt="Product 1">
@@ -176,6 +177,7 @@
                     <p>Price: $40</p>
                 </div>
             </div>
+            <h3>STANDARD</h3>
             <div class="products-row">
                 <div class="product">
                     <img src="images/IMG_20250112_221513_072.jpg" alt="Product 4">
