--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                     <img src="images/IMG_20250112_191300_172.jpg" alt="Gallery Image 1">
                 </div>
                 <div class="gallery-item">
-                    <img src="images/IMG_20250112_191323_358.jpg" alt="Gallery Image 2">
+                    <img src="images/IMG_20250112_233300_236.jpg" alt="Gallery Image 2">
                 </div>
                 <div class="gallery-item">
                     <img src="images/IMG_20250112_191331_341.jpg" alt="Gallery Image 3">
@@ -268,21 +268,21 @@
             <h2>Customer Feedback</h2>
             <div class="feedback-container">
                 <div class="feedback-item">
-                    <img src="https://via.placeholder.com/80" alt="Bouquet Image 1">
+                    <img src="images/IMG_20250112_233317_399.jpg" alt="Bouquet Image 1">
                     <div>
                         <p><strong>John Doe</strong></p>
                         <p>The rose bouquet was stunning! My wife loved it. Thank you for the amazing service.</p>
                     </div>
                 </div>
                 <div class="feedback-item">
-                    <img src="https://via.placeholder.com/80" alt="Bouquet Image 2">
+                    <img src="images/IMG_20250112_233334_302.jpg" alt="Bouquet Image 2">
                     <div>
                         <p><strong>Jane Smith</strong></p>
                         <p>Beautiful tulip arrangement! It brightened up our dinner table perfectly.</p>
                     </div>
                 </div>
                 <div class="feedback-item">
-                    <img src="https://via.placeholder.com/80" alt="Bouquet Image 3">
+                    <img src="images/IMG_20250112_233248_379.jpg" alt="Bouquet Image 3">
                     <div>
                         <p><strong>Emily Johnson</strong></p>
                         <p>Orchid pot was just as described and delivered on time. Highly recommend!</p>
